--- a/templates/booking/edit.html.twig
+++ b/templates/booking/edit.html.twig
@@ -88,7 +88,7 @@
         <button type="submit" class="flex-1 bg-[rgb(29,53,153)] text-white py-3 px-4 rounded-md hover:bg-[rgb(242,182,34)] transition-colors font-medium">
             Update Booking
         </button>
-        <a href="{{ path('booking_show', {'id': booking.id}) }}" class="flex-1 bg-gray-500 text-white py-3 px-4 rounded-md hover:bg-gray-600 transition-colors font-medium flex items-center justify-center no-underline">
+        <a href="{{ path('booking_index', {'id': booking.id}) }}" class="flex-1 bg-gray-500 text-white py-3 px-4 rounded-md hover:bg-gray-600 transition-colors font-medium flex items-center justify-center no-underline">
             Cancel
         </a>
     </div>
