--- a/templates/booking/history.html.twig
+++ b/templates/booking/history.html.twig
@@ -90,11 +90,13 @@
                         <td class="px-6 py-4 whitespace-nowrap">₱{{ booking.totalPrice|number_format(2) }}</td>
                         <td class="px-6 py-4 whitespace-nowrap space-x-3">
                             <a href="{{ path('booking_history_show', {'id': booking.id}) }}" class="text-blue-600 hover:text-blue-900 hover:underline">Show</a>
-                            <a href="{{ path('booking_history_edit', {'id': booking.id}) }}" class="text-green-600 hover:text-green-900 hover:underline">Edit</a>
-                            <form action="{{ path('booking_history_delete', {'id': booking.id}) }}" method="post" class="inline" onsubmit="return confirm('Are you sure you want to delete this booking history record?');">
-                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ booking.id) }}">
-                                <button type="submit" class="text-red-600 hover:text-red-900 hover:underline">Delete</button>
-                            </form>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <a href="{{ path('booking_history_edit', {'id': booking.id}) }}" class="text-green-600 hover:text-green-900 hover:underline">Edit</a>
+                                <form action="{{ path('booking_history_delete', {'id': booking.id}) }}" method="post" class="inline" onsubmit="return confirm('Are you sure you want to delete this booking history record?');">
+                                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ booking.id) }}">
+                                    <button type="submit" class="text-red-600 hover:text-red-900 hover:underline">Delete</button>
+                                </form>
+                            {% endif %}
                         </td>
                     </tr>
                 {% else %}
