--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -59,6 +59,10 @@
                 Log In
             </button>
         </form>
+        
+        <div class="mt-4 text-center text-sm">
+            <p>Don't have an account? <a href="{{ path('app_register') }}" class="text-blue-600 hover:underline">Register here</a></p>
+        </div>
     </div>
 </div>
 
